feat(#1059): expand backend species composition coverage and align DTO shapes
- Add 11 unit tests for DistrictVolumeService getAreasForDistrictCode and
  getAreasForMultipleDistricts (lines/branches coverage to 99.1%/96.1%)
- Change DistrictVolumeRepository.findActiveByArea return type from
  Optional to List with ORDER BY start_date DESC for both methods
- Adapt DistrictVolumeService to use stream().findFirst() on the new List
  return from findActiveByArea in both helper methods
- Rename SpeciesCompositionTableDataDto.speciesRows to rows for parity
  with the flat-row matrix contract
- Refactor DistrictVolumeMapper.toDetailDto to drop the redundant
  TableData(null,...) placeholder and extract the uploadInstant var
- Add Javadoc to the three public SpeciesCompositionService methods
- Use underscore for the ignored pattern variable in the switch guard
- Align DistrictVolumeMapperTest assertion to rows() and use getFirst()
- Add SPECIES_KEYS constant to SpeciesCompositionMapperTest